--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_rewards">Rewards</string>
     <string name="title_activity_leaderboard">Leaderboard</string>
+    <string name="title_activity_history">History</string>
 </resources>
